<resources>
    <string name="app_name">Story Apps</string>
    <string name="slogan">Get To Know People Story</string>
    <string name="greeting_login">Welcome Back!</string>
    <string name="greeting_register">Welcome Mate!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="toRegister">Have not register yet?</string>
    <string name="toLogin">Have an account?</string>
    <string name="logout">Logout</string>
    <string name="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="add_story">Choose Image From Gallery</string>
    <string name="location">Location</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>